Setup swagger with model classes and setting up register and login functionality
