# photosphere-backend/src/config/docs/swagger.json
@@ -7,7 +7,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"createUserDto": {
+			"createUserRequestDto": {
 				"properties": {
 					"fullName": {
 						"type": "string"
@@ -40,6 +40,22 @@
 					"email",
 					"password",
 					"confirmPassword"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"verifyUserRequestDto": {
+				"properties": {
+					"userName": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"userName",
+					"password"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -91,7 +107,49 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/createUserDto"
+								"$ref": "#/components/schemas/createUserRequestDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"statusCode": {
+											"type": "number",
+											"format": "double"
+										},
+										"user": {},
+										"message": {
+											"type": "string"
+										}
+									},
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/verifyUserRequestDto"
 							}
 						}
 					}
