# photosphere-backend/src/dtos/user/verifyUserRequestDto.ts
@@ -1,0 +1,4 @@
+export class verifyUserRequestDto {
+  userName!: string;
+  password!: string;
+}
